# RustGuard

./: .windsurfrules  Cargo.toml  README.md
cli/: Cargo.toml
cli/src/: main.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs
crates/config_scanner/: Cargo.toml
crates/config_scanner/src/: lib.rs
crates/container_scanner/: Cargo.toml
crates/container_scanner/src/: lib.rs
crates/deps_scanner/: Cargo.toml
crates/deps_scanner/src/: lib.rs
crates/report_generator/: Cargo.toml
crates/report_generator/src/: lib.rs
crates/scanner_core/: Cargo.toml
crates/scanner_core/src/: lib.rs
crates/secret_scanner/: Cargo.toml
crates/secret_scanner/src/: lib.rs  patterns.rs
