[package]
name = "rustguard"
version = "0.1.0"
edition = "2024"

[workspace]
members = [
    "crates/scanner_core",
    "crates/deps_scanner",
    "crates/container_scanner",
    "crates/secret_scanner",
    "crates/config_scanner",
    "crates/report_generator",
    "crates/shared_utils",
    "crates/config",
    "cli"
]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
tokio = { version = "1.32.0", features = ["full"] }
clap = { version = "4.4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
reqwest = { version = "0.11", features = ["json"] }
rayon = "1.8"
regex = "1.10"
git2 = "0.16"
colored = "2.0"
indicatif = "0.18"
thiserror = "1.0"
anyhow = "1.0"

[dependencies]
