[package]
name = "rustguard"
version = "0.1.0"
edition = "2021"

[dependencies]
rustguard_scanner_core = { path = "../crates/scanner_core" }
rustguard_config = { path = "../crates/config" }
anyhow = "1.0"
clap = { version = "4.4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
colored = "2.0"
indicatif = "0.18"
